[tool.poetry]
name = "pyfunctools"
version = "0.4.0"
description = "pyfunctools - Functional programming toolkit"
authors = ["Natan Santos <natansantosapps@gmail.com>"]
readme = "README.md"
packages = [{include = "pyfunctools"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"