[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core>=1.0.0']

[tool]
[tool.poetry]
authors = ['Natan Santos <natansantosapps@gmail.com>']
description = 'pyfunctools - Functional programming toolkit'
name = 'pyfunctools'
readme = 'README.md'
version = '0.6.0'

[tool.poetry.dependencies]
python = '^3.8'

[tool.poetry.dev-dependencies]
pytest = '^6.2'

[[tool.poetry.packages]]
include = 'pyfunctools'
